  [Daniele Viganò]
  * Removed the openquake_worker.cfg file because it is not used anymore

  [Michele Simionato]
  * Replaced PostgreSQL with SQLite
  * Introduced a dbserver to mediate the interaction with the database
  * Restored the signal handler to manage properly `kill` signals so that
    the workers are revoked when a process is killed manually
  * Fixed in a more robust way the duplicated log bug
  * Made more robust the killing of processes by patching concurrent.futures
  * Fixed a critical bug with celery not being used even when `use_celery`
    was true.
  * Improved the validation of NRML files
  * Added a command `oq-engine --show-log <job_id>`

  [Daniele Viganò]
  * Use the 'postgresql' meta package as dependency of the .deb
    package to support newer versions of Postgres; this makes
    Trusty package installable on Ubuntu 16.04 and Debian 8

  [Daniele Viganò, Michele Simionato]
  * Fixed a bug in `oq-engine --export-outputs`

  [Daniele Viganò, Matteo Nastasi]
  * Allow installation of the binary package on Ubuntu derivatives

  [Michele Simionato]
  * Removed openquake/engine/settings.py
  * Made the dependency on celery required only in cluster installations
  * Integrated the authentication database in the engine server database
  * Fixed the description in the Web UI (before it was temporarily set to
    the string "A job").

python-oq-engine (1.9.1-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Fixed a bug in the Web UI when running a risk calculation starting
    from a previous calculation

 -- Matteo Nastasi (GEM Foundation) <nastasi@openquake.org>  Mon, 07 Mar 2016 11:11:59 +0100

python-oq-engine (1.9.0-0~precise01) precise; urgency=low

  [Michele Simionato]
  * Fixed a bug such that in some circumstances the logging stream handler
    was instantiated twice, resulting in duplicated logs
  * Changed the default job status to 'executing' (was 'pre_executing')
  * Fixed the ordering of the logs in the Web UI